--- a/index.css
+++ b/index.css
@@ -1,13 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 .swar {
-    font-size: 125px;
+    font-family: 'Roboto Mono', monospace;
+
+    line-height: normal;
+    /* font-family: monospace; */
+
+    font-size: 80px;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .cont {
     width: 100%;
-    height: 100vh;
-    padding-bottom: 10vh;
+    height: calc(100vh - 48px);
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.choose {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.btn.active, .btn:active {
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
 }
